--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div class="intro">
                 <img class="profile-pic" src="img/profile.png" alt="profile-pic">
                 <h2>Hey,</h2>
-                <p class="introtext">I am Prantor. Also known as FlexedPanda. I love SpeedCubing <img class="emoji" src="img/Cube.ico" alt="Cube">, Playing Chess <img class="emoji" class="emoji" src="img/Chess.ico" alt="Chess">, Playing Valorant <img class="emoji" src="img/Valorant.ico" alt="Valorant">, Coffee <img class="emoji" src="img/Coffee.ico" alt="Coffee"> & Coding <img class="emoji" src="img/Coding.ico" alt="Coding">.</p>
+                <p class="introtext">I'm Farhan Haseen Prantor [aka FlexedPanda].<br> 
+                    I love SpeedCubing <img class="emoji" src="img/Cube.ico" alt="Cube">, Playing Chess <img class="emoji" class="emoji" src="img/Chess.ico" alt="Chess">, Playing Valorant <img class="emoji" src="img/Valorant.ico" alt="Valorant">, Coffee <img class="emoji" src="img/Coffee.ico" alt="Coffee"> & Coding <img class="emoji" src="img/Coding.ico" alt="Coding">.</p>
             </div>
             <hr>
             <div class="skills">
@@ -24,41 +25,46 @@
                 <div class="skillrows">
                     <img class="skill-picA" src="img/codingpic.png" alt="coding">
                     <h3>Coding</h3>
-                    <p>I didn't have any coding background till admitting in BRAC university. Felt left behind due to that fact. But interestingly I found fun in coding, I loved the logistics behind codes. Completed my Cse220 Course till date.</p>
+                    <p>I didn't have any coding experience before I got admitted into BRAC university. Many occasions I felt left behind due to that fact. But interestingly I later enjoyed coding, I loved the logistics behind codes.</p>
+
                 </div>
                 <div class="skillrows">
                     <img class="skill-picB" src="img/speedcubingpic.png" alt="cubing">
                     <h3>Cubing</h3>
-                    <p>I starded cubing since class 9. But I at that time just knew how to solve a cube, nothing much. A turn took-over me during class 10. I was amazed by speedcubing then. But as a regret, coundn't achieve sub-20 myself. My average of 5 solves is 23.08 secs.</p>
+                    <p>I starded cubing since class 9. But during class 10, speedcubing got my attention. Unfortunately, I coundn't achieve sub-20 myself. My average of 5 solves is 23.08 secs.</p>
                 </div>
+
                 <div class="skillrows">
                     <img class="skill-picA" src="img/chesspic.png" alt="chess">
                     <h3>Chess</h3>
-                    <p>Found chess too much interesting. I loved the strategic moves that you need to think and strategize every moves and plan ahead in the game of chess. Thus, I grew a fan for chess during class 7. Also was in college's chess club. My rating is roughly 1200.</p>
+                    <p>Found chess too much interesting from my childhood. I loved the strategic thinking and planning ahead aspects of chess. Also, I was a member of my college's chess club. My rating is roughly 1100.</p>
                 </div>
+
                 <div class="skillrows">
                     <img class="skill-picB" src="img/coffeepic.png" alt="coffee">
                     <h3>Coffee</h3>
-                    <p>Man, I love coffee. My love for coffee can't be described in words. My mother's coffee is the best for me. Whenever I get a free moment, without a cup of coffee feels like emptiness for me. Fun fact, I drink coffee 5 times a day.</p>
+                    <p>Man, I love coffee. My love for coffee can't be described in words. I can't even pass a day without coffee. Fun fact, I drink coffee 4 times a day.</p>
                 </div>
+
                 <div class="skillrows">
                     <img class="skill-picA" src="img/valorantpic.png" alt="valorant">
                     <h3>Valorant</h3>
-                    <p>Valorant is my 1st full fledged pc game. The cometativeness in valorant makes me play it more. I truly love the tactical fps aspect of valorant. Spent over 10k on skins. I'm maily a controller main. My peak rank is Platinum 1 with 64 RR.</p>
+                    <p>Valorant is my 1st full fledged pc game. I truly love the competitiveness & tactical fps aspect of valorant. Spent over 10k on skins. I'm maily a controller main. My peak rank is Platinum 1 with 64 RR.</p>
                 </div>
             </div>
+
             <hr>
             <div class="outro">
                 <h2>Get in Touch</h2>
                 <h3>How to contact me?</h3>
                 <p>From BracU? No worries! You'll always find me by the Bottola road near UB8, Khorshed mama's tea stall & in the pool.</p>
-                <a class="btn" href="mailto:boysir7@gmail.com">Contact Me</a>
+                <a class="btn" href="mailto:farhan.haseen.prantor@g.bracu.ac.bd">Contact Me</a>
             </div>
         </div>
         <div class="footer">
             <a class="ftlink" href="https://www.facebook.com/profile.php?id=100008089544026"><img class="ftemoji" src="img/facebook.ico" alt="facebook">Facebook</a>
             <a class="ftlink" href="https://www.instagram.com/_flexedpanda_"><img class="ftemoji" src="img/instagram.ico" alt="instagram">Instagram</a>
-            <p class="copyright">© 2023 Farhan Haseen Prantor @FlexedPanda.</p>
+            <p class="copyright">© 2024 Farhan Haseen Prantor @FlexedPanda.</p>
         </div>
     </body>
 </html>
